--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
     "start": "vite preview --host --port 4173"
   },
   "dependencies": {
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.3.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
+    "gsap": "^3.13.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "node-fetch": "^3.3.2",
+    "ogl": "^1.0.11",
     "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
