--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "^3.3.2",
     "ogl": "^1.0.11",
     "pg": "^8.16.3",
+    "postprocessing": "^6.37.7",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
